# svelte-static-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
src/: app.postcss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: util.ts
src/lib/components/: BaseLayout.svelte  Layout.svelte  Modal.svelte  Notification.svelte  Notifications.svelte  Spinner.svelte
src/lib/stores/: locale.ts  online.ts  user.ts
src/routes/: +layout.svelte
src/routes/(authed)/: +layout.ts  +page.svelte
src/routes/(unauthed)/signin/: +page.svelte
static/: manifest.json
